[package]
name = "netrex"
version = "0.1.0"
authors = ["Bavfalcon9"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hard depend on binary_utils
binary_utils = { git = "https://github.com/NetrexMC/BinaryUtil", tag = "v0.2.2-alpha" }
flate2 = { version = "1.0.22", features = ["zlib"] }
rakrs = { git = "https://github.com/NetrexMC/RakNet", branch = "master" }
netrex_events = { git = "https://github.com/NetrexMC/Events", branch = "master" }
mcpe_protocol = { git = "https://github.com/NetrexMC/Protocol", branch = "master" }
simplelog = "0.11.0"
log = "0.4.14"
byteorder = "1.4.3"
jwt = "0.15.0"
base64 = "0.13.0"
serde_json = "1.0.72"
png = "0.17.2"
tokio = "1.15.0"
