[package]
name = "netrex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetrexMC/Netrex"
description = "A Minecraft server written in Rust"
keywords = ["minecraft", "server", "rust"]
private = true

[dependencies]
# async-std = { version = "1.10.0", features = [ "unstable", "attributes" ] }
tokio = { version = "1.15.0", features = ["full"] }
rakrs = { git = "https://github.com/NetrexMC/RakNet", tag = "v0.3.0-rc.4", features = [ "mcpe" ] }